# sylpheed-search

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac
po/: sylsearch.pot
src/: Makefile.am  sylsearch-import.c  sylsearch.c  sylsearch.h
